<resources>
    <string name="app_name">Music Player</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="contactEmail">jalexspringer@gmail.com</string>
    <string name="appTitle">Unified Music Player</string>
    <string name="my_library">My Library</string>
    <string name="radio">Radio</string>
    <string name="explore">Explore</string>
    <string name="now_playing">Now Playing</string>
    <string name="artist_track">Morpheus - Take the Red Pill</string>
    <string name="nowPlayingDescribe">The \'Now Playing\' activity will show the name, artist, and album of the currently selected track. Buttons will need to move forward or back within the selected playlist or album. This will require reading the library and understanding the order the tracks are in, as well as being able to play them.</string>
    <string name="trackTime">1:34 / 3:30</string>
    <string name="explore_new_music">Explore New Music</string>
    <string name="exploreText">This activity will focus on offering new music suggestions for the user. To accomplish this will require a couple of different processes. First is to understand of a users likes - scraping the tracks and artists in their library and finding a theme. Then this activity will need to call a list of tracks and/or artists that match this theme but are not in the current library. Finally the activity will need to offer the ability to stream some of that new music or offer a download of the tracks or albums.</string>
    <string name="udac_radio">Udac Radio</string>
    <string name="radiotext">The Udac Radio activity will hook into a service like Pandora (API? maybe?) and offer a streaming radio service for any artist, track, or genre.</string>
    <string name="libraryText">The library activity will scan for music on the Android device and offer the tracks, artists, and albums as selections. Any selected track will call the MainActivity (Now Playing), load the track, and play it for the user.</string>
</resources>
