<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.alexs.udacmusic.Explore"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:paddingLeft="6dp"
        android:paddingBottom="16dp"
        android:background="@color/colorPrimaryDark">

        <TextView
            android:id="@+id/nowPlaying"
            style="@style/menuBar"
            android:text="@string/now_playing"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content" />
        <TextView
            android:id="@+id/library"
            style="@style/menuBar"
            android:text="@string/my_library"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content" />
        <TextView
            android:id="@+id/explore"
            style="@style/menuBar"
            android:textColor="@color/selected"
            android:text="Explore"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content" />
        <TextView
            android:id="@+id/radio"
            style="@style/menuBar"
            android:text="Radio"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="16dp">
        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:scaleType="centerInside"
            style="@style/imageHeader"
            android:src="@drawable/explore"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/primeHeader"
            android:text="@string/explore_new_music"/>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/exploreText"/>
</LinearLayout>